# sensority-collector

./: .clang-format  .cmake-format  .gitignore  CMakeLists.txt  Dockerfile.dev  LICENSE
cmake/: ProjectConfigs.cmake  ProjectInstall.cmake  ProjectOptions.cmake
cmake/modules/: AddBoost.cmake  AddGoogleTest.cmake  AddGrpc.cmake  AddMosquitto.cmake  AddPoco.cmake  BuildType.cmake  CodeFormat.cmake  CxxTestCompiler.cmake  CxxTestCompiler.cpp  FindClangFormat.cmake
config/: CMakeLists.txt  sensority-collector.properties
config/properties/: CMakeLists.txt  scollector.properties.in
config/protos/: CMakeLists.txt  DataAccessService.proto
config/systemd/: CMakeLists.txt  scollector.service.in
scripts/: environment  run-dev-env.sh  run-test-env.sh
src/: CMakeLists.txt  SensorityApplication.cpp  SensorityApplication.hpp  main.cpp
src/common/: CMakeLists.txt
src/common/include/common/: Constants.hpp  Logger.hpp  Utils.hpp
src/common/src/: Utils.cpp
src/connectivity/: CMakeLists.txt
src/connectivity/include/connectivity/: ConnectivitySubsystem.hpp  IMqttClient.hpp  MqttClient.hpp  MqttCommon.hpp  MqttInitializer.hpp
src/connectivity/src/: ConnectivitySubsystem.cpp  MqttClient.cpp  MqttCommon.cpp  MqttInitializer.cpp
src/connectivity/test/common/: CMakeLists.txt
src/connectivity/test/common/include/connectivity/: MockMqttClient.hpp
src/connectivity/test/common/src/: MockMqttClient.cpp
src/storage/: CMakeLists.txt
src/storage/include/storage/: CompositeDataObserver.hpp  DataAccessor.hpp  DataObserver.hpp  DataStorage.hpp  DataTypes.hpp  DataWriter.hpp  IDataAccessor.hpp  IDataJob.hpp  IDataModel.hpp  IDataReader.hpp  IDataStorage.hpp  IDataWriter.hpp  SensorDataObserver.hpp  StorageSubsystem.hpp  TypedDataModel.hpp
src/storage/include/storage/accessor/: BreathVocDataAccessor.hpp  Co2Data.hpp  Co2DataAccessor.hpp  EvocData.hpp  GasData.hpp  GasDataAccessor.hpp  HumidityData.hpp  HumidityDataAccessor.hpp  IaqData.hpp  IaqDataAccessor.hpp  PressureData.hpp  PressureDataAccessor.hpp  TempDataAccessor.hpp  TemperatureData.hpp  TemperatureDataAccessor.hpp  TvocData.hpp  TvocDataAccessor.hpp  eBreathVocDataAccessor.hpp  eCo2DataAccessor.hpp
src/storage/include/storage/model/: BreathVocDataModel.hpp  Co2DataModel.hpp  GasDataModel.hpp  HumidityDataModel.hpp  IaqDataModel.hpp  PressureDataModel.hpp  TempDataModel.hpp  TemperatureDataModel.hpp  TvocDataModel.hpp  eBreathVocDataModel.hpp  eCo2DataModel.hpp
src/storage/src/: CompositeDataObserver.cpp  DataAccessor.cpp  DataObserver.cpp  DataStorage.cpp  DataWriter.cpp  SensorDataObserver.cpp  StorageSubsystem.cpp  TypedDataModel.cpp
src/storage/src/accessor/: BreathVocDataAccessor.cpp  Co2Data.cpp  Co2DataAccessor.cpp  EvocData.cpp  GasData.cpp  GasDataAccessor.cpp  HumidityData.cpp  HumidityDataAccessor.cpp  IaqData.cpp  IaqDataAccessor.cpp  PressureData.cpp  PressureDataAccessor.cpp  TempDataAccessor.cpp  TemperatureData.cpp  TemperatureDataAccessor.cpp  TvocData.cpp  TvocDataAccessor.cpp  eBreathVocDataAccessor.cpp  eCo2DataAccessor.cpp
src/storage/src/model/: BreathVocDataModel.cpp  Co2DataModel.cpp  GasDataModel.cpp  HumidityDataModel.cpp  IaqDataModel.cpp  PressureDataModel.cpp  TempDataModel.cpp  TemperatureDataModel.cpp  TvocDataModel.cpp  eBreathVocDataModel.cpp  eCo2DataModel.cpp
src/storage/test/common/: CMakeLists.txt
src/storage/test/common/include/storage/: MockDataAccessor.hpp  MockDataObserver.hpp  MockDataStorage.hpp  MockDataWriter.hpp
src/storage/test/unit/: CMakeLists.txt
src/storage/test/unit/src/: CompositeDataObserverTest.cpp  DataObserverTest.cpp  DataWriterTest.cpp  SensorDataObserverTest.cpp
src/storage/test/unit/src/accessor/: BreathVocDataAccessorTest.cpp  Co2DataAccessorTest.cpp  Co2DataTest.cpp  EvocDataTest.cpp  GasDataAccessorTest.cpp  GasDataTest.cpp  HumidityDataAccessorTest.cpp  HumidityDataTest.cpp  IaqDataAccessorTest.cpp  IaqDataTest.cpp  PressureDataAccessorTest.cpp  PressureDataTest.cpp  TempDataAccessorTest.cpp  TemperatureDataAccessorTest.cpp  TemperatureDataTest.cpp  TvocDataAccessorTest.cpp  TvocDataTest.cpp  eBreathVocDataAccessorTest.cpp  eCo2DataAccessorTest.cpp
src/storage/test/unit/src/model/: BreathVocDataModelTest.cpp  Co2DataModelTest.cpp  GasDataModelTest.cpp  HumidityDataModelTest.cpp  IaqDataModelTest.cpp  PressureDataModelTest.cpp  TempDataModelTest.cpp  TemperatureDataModelTest.cpp  TvocDataModelTest.cpp  eBreathVocDataModelTest.cpp  eCo2DataModelTest.cpp
test/: CMakeLists.txt
test/src/: test.cpp
toolchain/: x86_64-poky-linux.cmake
tools/: CMakeLists.txt
tools/tests/: CMakeLists.txt
tools/tests/include/tests/: Waiter.hpp
tools/tests/src/: TestApplication.cpp  TestApplication.hpp
